[tool.poetry]
name = "adbsi"
version = "0.1.0"
description = "A simple interface for using ADB to sideload files onto android devices"
authors = ["Kieran Wynne <keewynne90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytermgui = "^7.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^4.5.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
