[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kieran Wynne", email = "keewynne90@gmail.com"},
]
dependencies = [
    "pytermgui>=7.2.0",
    "toml>=0.10.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=4.5.1",
    "black>=22.10.0",
]
